<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, CsoundAppActivity!</string>
    <string name="app_name">Csound 6</string>
    <string name="slider1">slider1</string>
    <string name="slider2">slider2</string>
    <string name="slider3">slider3</string>
    <string name="slider4">slider4</string>
    <string name="slider5">slider5</string>
    <string name="butt1">butt1</string>
    <string name="butt2">butt2</string>
    <string name="butt3">butt3</string>
    <string name="butt4">butt4</string>
    <string name="butt5">butt5</string>
    <string name="trackpad">trackpad</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Open">Open</string>
    <string name="Edit">Edit</string>
    <string name="New">New</string>
    <string name="help">Csound help</string>
    <string name="about">About Csound</string>
    <string name="guide">User guide</string>
    <string name="settings">Settings</string>
    <string name="csd_template" space="preserve"><![CDATA[<CsoundSynthesizer>
<CsLicense>
</CsLicense>
<CsOptions>
</CsOptions>
<CsInstruments>
</CsInstruments>
<CsScore>
</CsScore>
</CsoundSynthesizer>]]>
</string>
    <string name="settingsActivityTitle">Csound Settings</string>
</resources>