<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/newButton"
            style="@style/csoundButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:tag="csound:newButton"
            android:text="@string/New" />

        <Button
            android:id="@+id/openButton"
            style="@style/csoundButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:tag="csound:openButton"
            android:text="@string/Open" />

        <Button
            android:id="@+id/editButton"
            style="@style/csoundButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/Edit" />

        <ToggleButton
            android:id="@+id/runButton"
            style="@style/csoundButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:textOff="@string/Start"
            android:textOn="@string/Stop" />
    </TableRow>

    <TableLayout
        android:id="@+id/channelsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/seekBar1"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slider1" />

        <TextView
            android:id="@+id/textView1"
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekBar2"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider2"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekBar3"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider3"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekBar4"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider4"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekBar5"
            style="@style/csoundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            style="@style/csoundSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider5"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/butt1" />

            <Button
                android:id="@+id/button2"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/butt2" />

            <Button
                android:id="@+id/button3"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/butt3" />

            <Button
                android:id="@+id/button4"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/butt4" />

            <Button
                android:id="@+id/button5"
                style="@style/csoundButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/butt5" />
        </TableRow>

        <Button
            android:id="@+id/pad"
            style="@style/csoundButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:layout_marginTop="-5dip"
            android:text="@string/trackpad" />
    </TableLayout>

    <WebView
        android:id="@+id/webLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ScrollView
        android:id="@+id/messageScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00ff00"
            android:textSize="10sp"
            android:typeface="monospace" />
    </ScrollView>

</TableLayout>